code/python/FactSetFunds/v1/docs/DistHistorical.md
# DistHistorical


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**fsym_id** | **str, none_type** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the requestId of the Fund requested. | [optional] 
**date** | **date, none_type** | The date of the distribution in YYYY-MM-DD format. | [optional] 
**currency** | **str, none_type** | ISO Currency | [optional] 
**total_distributions** | **float, none_type** | Total Distributions. | [optional] 
**return_of_capital** | **float, none_type** | Return on Capital. | [optional] 
**qualified_dividends** | **float, none_type** | Qualified Dividends. | [optional] 
**non_qualified_dividends** | **float, none_type** | Qualified Dividends. | [optional] 
**daily_accrued_dividends** | **float, none_type** | Daily Accrued Dividends. | [optional] 
**st_capital_gains** | **float, none_type** | Short-Term Capital Gains. | [optional] 
**lt_capital_gains** | **float, none_type** | Long-Term Capital Gains. | [optional] 
**seven_day_net_sec_yield** | **float, none_type** | Net SEC yield for the last seven days. | [optional] 
**seven_day_gross_sec_yield** | **float, none_type** | Gross SEC yield for the last seven days. | [optional] 
**thirty_day_net_sec_yield** | **float, none_type** | Net SEC yield for the thirty thirty days. | [optional] 
**thirty_day_gross_sec_yield** | **float, none_type** | Gross SEC yield for the last thirty days. | [optional] 
**request_id** | **str** | The requested Id sent as input. | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


