code/python/FactSetFunds/v3/docs/DistHistorical.md
# DistHistorical

Historical distribution data including dividends, capital gains, and yields over time

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**distribution_type** | [**DistHistoricalType**](DistHistoricalType.md) |  | 
**fsym_id** | **str, none_type** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the &#x60;requestId&#x60; of the Fund requested. | [optional] 
**request_id** | **str** | The requested Id sent as input. | [optional] 
**error** | [**FundsErrorObject**](FundsErrorObject.md) |  | [optional] 
**date** | **date, none_type** | The date of the distribution in YYYY-MM-DD format. | [optional] 
**currency** | **str, none_type** | ISO3 Currency. For a list of currency ISO codes, visit Online Assistant Page [OA1470](https://my.apps.factset.com/oa/pages/1470)&#39; | [optional] 
**total_distributions** | **float, none_type** | Total Distributions. | [optional] 
**return_of_capital** | **float, none_type** | Return on Capital. | [optional] 
**qualified_dividends** | **float, none_type** | Qualified Dividends. | [optional] 
**non_qualified_dividends** | **float, none_type** | Non-Qualified Dividends. | [optional] 
**daily_accrued_dividends** | **float, none_type** | Daily Accrued Dividends. | [optional] 
**short_term_capital_gains** | **float, none_type** | Short-Term Capital Gains. | [optional] 
**long_term_capital_gains** | **float, none_type** | Long-Term Capital Gains. | [optional] 
**dividend_type** | **str, none_type** | Returns the dividend treatment for the specified share class (distributes/capitalizes). Data is returned for both Mutual Funds and ETFs. | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


